[package]
name = "tower-http-timeout-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net"] }
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
tracing-subscriber = { version = "0.3.18" }
